- Submissions that report a "tx_bad_seq" failure will be resubmitted up to 3 times. Resubmission delay raised to 15 seconds. - Updated progress output window to show channels waiting for resubmission. - Updated progress output window to show an additional entry for channels that experienced errors, while retaining the current state [WAITING|PROCESSING|COMPLETED] visible. - Improved progress output formatting. - Reduced font size to make sure the now potentially longer strings fit in OSX - Updated Stellar SDK to version 0.3.3

--- a/manager/src/main/resources/inflationManagerMain.css
+++ b/manager/src/main/resources/inflationManagerMain.css
@@ -1,5 +1,6 @@
 .text-area {
     -fx-font-family: Monospaced;
+    -fx-font-size: 8pt;
     -fx-text-fill: #eeeed9;
     -fx-display-caret: false;
 }
